--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "bin": {
     "ai-workflow": "./dist/cli/index.js"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raj-khan/ai-workflow.git"
+  },
+  "homepage": "https://github.com/raj-khan/ai-workflow#readme",
   "scripts": {
     "build": "tsc",
     "dev": "tsx src/cli/index.ts",
