--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aiagentflow",
+  "name": "@aiagentflow/cli",
   "version": "0.1.0",
   "description": "A local-first, CLI-driven multi-agent AI software engineering workflow orchestrator",
   "type": "module",
